--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "js-yaml": "^3.14.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "websocket-extensions": "^0.1.4"
   }
 }
